fixat z-index på navigationen

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   width: 100%;
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
+  z-index: 100;
 }
 .top-navigation .fa-apple {
   color: #f5f5f7;
